twitter bootstrap 3 upgrade: fix collapse button

--- a/website/optaplannerWebsite.css
+++ b/website/optaplannerWebsite.css
@@ -39,11 +39,6 @@ footer {
 .body-without-header-footer {
     padding-top: 50px;
 }
-@media (max-width: 979px) {
-    .body-without-header-footer {
-        padding-top: 0;
-    }
-}
 
 /* Reduce space taken by alerts */
 .alert {
